Clinic Search by name,street & Doctor Search by Name,Insert Doctor details added
