# src/routers/routes.js
@@ -1,6 +1,8 @@
-const express=require("express");
-const router=express.Router();
-const clinic=require("./clinic");
+const express = require("express");
+const router = express.Router();
+const clinic = require("./clinic");
+const doctor = require("./doctor");
 
-router.use("/clinic",clinic);
-module.exports= router;
+router.use("/clinic", clinic);
+router.use("/doctor", doctor);
+module.exports = router;
