# src/swagger.json
@@ -31,7 +31,7 @@
   "tags": [
     {
       "name": "Metadata",
-      "description": "API for users in the system"
+      "description": "API for clinic/doctor in the system"
     }
   ],
   "schemes": [
@@ -47,7 +47,7 @@
     "/clinic": {
       "get": {
         "tags": [
-          "Clinic Details"
+          "View Clinic Details"
         ],
         "summary": "Get all clinics in system",
         "description": "This can only be done by the logged in user.",
@@ -57,7 +57,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/Users"
+              "$ref": "#/definitions/Clinic"
             }
           }
         }
@@ -82,14 +82,14 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/Users"
+              "$ref": "#/definitions/Clinic"
             }
           }
         }
       },
       "put": {
         "tags": [
-          "Users"
+          "Update Clinic details"
         ],
         "summary": "Update clinic details",
         "description": "This can only be done by the logged in user.",
@@ -107,59 +107,115 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/Users"
+              "$ref": "#/definitions/Clinic"
             }
           }
         }
       }
     },
-    "/user/{email_id}": {
-      "delete": {
+    "/clinic/name/{name}": {
+      "get": {
         "tags": [
-          "Users"
+          "Search Clinic details by name"
         ],
-        "summary": "Delete users in system",
+        "summary": "View Clinic details by name",
         "description": "This can only be done by the logged in user.",
-        "operationId": "deleteUser",
+        "operationId": "viewClinicByName",
         "produces": "application/xml,application/json",
         "parameters": [
           {
-            "name": "email_id",
+            "name": "name",
             "in": "path",
             "required": "true",
-            "description": "Delete user"
+            "description": "View Clinic Details"
           }
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/Users"
+              "$ref": "#/definitions/Clinic"
             }
           }
         }
-      },
+      }
+    },
+    "/clinic/street/{street}": {
       "get": {
         "tags": [
-          "Users"
+          "Search Clinic details by Street"
         ],
-        "summary": "View my details",
+        "summary": "View Clinic details by Street Name/No.",
         "description": "This can only be done by the logged in user.",
-        "operationId": "viewUser",
+        "operationId": "viewClinicByStreet",
         "produces": "application/xml,application/json",
         "parameters": [
           {
-            "name": "email_id",
+            "name": "street",
             "in": "path",
             "required": "true",
-            "description": "View my Details"
+            "description": "View Clinic Details"
           }
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/Users"
+              "$ref": "#/definitions/Clinic"
+            }
+          }
+        }
+      }
+    },
+    "/doctor/{id}": {
+      "get": {
+        "tags": [
+          "Get Doctor Details by ID"
+        ],
+        "summary": "View Doctor Details",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "viewDoctors",
+        "produces": "application/xml,application/json",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": "true",
+            "description": "View Clinic Details"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Doctor"
+            }
+          }
+        }
+      }
+    },
+    "/doctor/": {
+      "post": {
+        "tags": [
+          "Add Doctor"
+        ],
+        "summary": "Insert doctor details into system",
+        "description": "This can only be done by the logged in user.",
+        "operationId": "insertDcotor",
+        "produces": "application/xml,application/json",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": "true",
+            "description": "Enter doctor details"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Dcotor"
             }
           }
         }
@@ -167,40 +223,50 @@
     }
   },
   "definitions": {
-    "User": {
+    "Clinic": {
       "required": [
-        "email",
-        "_id"
+        "name"
       ],
       "properties": {
-        "email_id": {
+        "name": {
           "type": "string",
           "uniqueItems": true
-        },
-        "first_name": {
-          "type": "string"
-        },
-        "last_name": {
-          "type": "string"
-        },
-        "user_type": {
-          "type": "string",
-          "uniqueItems": true
-        },
-        "dob": {
-          "type": "date"
         },
         "address": {
           "type": "string"
         },
         "contact_no": {
           "type": "string"
+        },
+        "about": {
+          "type": "string"
         }
       }
     },
-    "Users": {
-      "type": "array",
-      "$ref": "#/definitions/User"
+    "Doctor": {
+      "required": [
+        "first_name",
+        "last_name"
+      ],
+      "properties": {
+        "first_name": {
+          "type": "string",
+          "uniqueItems": true
+        },
+        "last_name": {
+          "type": "string",
+          "uniqueItems": true
+        },
+        "address": {
+          "type": "string"
+        },
+        "contact_no": {
+          "type": "string"
+        },
+        "about": {
+          "type": "string"
+        }
+      }
     }
   }
 }
